cmake_minimum_required(VERSION 2.8.9)
project(shell)
include_directories(include)
add_executable(bobsh src/bobsh.c src/boberr.c include/boberr.h)
add_executable(ls src/bobls.c src/boberr.c include/boberr.h)
add_executable(cp src/bobcopy.c src/boberr.c include/boberr.h)
add_executable(stat src/bobstat.c src/boberr.c include/boberr.h)
add_executable(tee src/bobtee.c src/boberr.c include/boberr.h)
add_executable(cat src/bobcat.c src/boberr.c include/boberr.h)
